# rafael5na

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
parquet/cars24.parquet/: .part-00000-c1476c1e-bedf-4daf-8c2e-28f5b96d6db5-c000.snappy.parquet.crc  part-00000-c1476c1e-bedf-4daf-8c2e-28f5b96d6db5-c000.snappy.parquet
work/: Untitled.ipynb
